--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: SalarpouriA.github.io
+title: Ali Salapouri Website
 
 # Short description of your site
 description: A virtual proof that I'm awesome
